Попап Добавить склад"

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             </svg>
           </div>
         </div>
+        <div class="select__btn">
+          <a class="btn btn--main btn--warehouse-create" href="modal-warehouse-create.html">Добавить склад</a>
+        </div>
       </section>
 
       <section class="data">
@@ -57,8 +60,8 @@
 
   </main>
 
+  @@include('../modal-warehouse-create.html')
   @@include('footer.html')
-
 
 </body>
 </html>
