Формы, кроме проверки заполнения полей

--- a/choose.html
+++ b/choose.html
@@ -70,7 +70,7 @@
               <td class="col-address">ул. Тимирязева, д. 18</td>
               <td class="col-price-pallete-day">25</td>
               <td class="col-free">100</td>
-              <td class="col-reserved col-btn"><a href="" class="btn btn--table btn-reserve">Забронировать</a></td>
+              <td class="col-reserved col-btn">@@include('btn-reserve.html')</td>
             </tr>
             <tr>
               <td class="col-num">1</td>
@@ -78,7 +78,7 @@
               <td class="col-address">ул. Тимирязева, д. 18</td>
               <td class="col-price-pallete-day">25</td>
               <td class="col-free">100</td>
-              <td class="col-reserved"><a href="" class="btn btn--table btn--reserve">Забронировать</a></td>
+              <td class="col-reserved">@@include('btn-reserve.html')</td>
             </tr>
           </tbody>
        </table>
