--- a/modal-warehouse-create.html
+++ b/modal-warehouse-create.html
@@ -1,7 +1,9 @@
-<articl'\20BD'e class="modal modal--warehouse-create">
+<article class="modal modal--warehouse-create">
   <div class="modal__overlay">
     <div class="modal__inner">
       <div class="modal__container">
+
+        <form class="form form--warehouse-create">
 
         <section class="modal__section modal__section--warehouse">
           <div class="modal__title"><span>Информация о складе</span></div>
@@ -103,15 +105,16 @@
         </section>
 
         <div class="modal__buttons-load">
-            <button class="btn btn--main btn--load" href="index.html">Загрузить свидетельство на объект</button>
-            <button class="btn btn--main btn--load" href="index.html">Загрузить Реквизиты</button>
+            <button class="btn btn--main btn--load">Загрузить свидетельство на объект</button>
+            <button class="btn btn--main btn--load">Загрузить Реквизиты</button>
         </div>
 
         <div class="modal__btn-submit">
-          <button class="btn btn--main btn--modal-submit" href="index.html">Добавить склад</button>
+          <button class="btn btn--main btn--modal-submit">Добавить склад</button>
         </div>
 
         <a class="btn btn--modal-close"></a>
+      </form>
       </div>
     </div>
   </div>
