--- a/modal-warehouse-create.html
+++ b/modal-warehouse-create.html
@@ -69,7 +69,7 @@
                   "placeholder": "Контактные данные"
                 })
                 @@include('field-text.html', {
-                  "type": "phone",
+                  "type": "tel",
                   "classes": "field--modal field--manager-phone",
                   "label": "Телефон",
                   "placeholder": "+7(012) 345 67 89"
@@ -89,7 +89,7 @@
                   "placeholder": "Контактные данные"
                 })
                 @@include('field-text.html', {
-                  "type": "phone",
+                  "type": "tel",
                   "classes": "field--modal field--contact-phone",
                   "label": "Телефон",
                   "placeholder": "+7(012) 345 67 89"
