--- a/modal-reserve.html
+++ b/modal-reserve.html
@@ -56,7 +56,7 @@
         </section>
 
         <div class="modal__btn-submit">
-          <button class="btn btn--main btn--modal-submit" href="index.html">Подтвердить бронирование</button>
+          <button class="btn btn--main btn--modal-submit">Подтвердить бронирование</button>
         </div>
 
         <a class="btn btn--modal-close"></a>
